Se commitean cambios, se arregla agregar productos con ingredientes a las cuentas y se arreglan pagos